# Unity_UR3_Levenberg-Marquardt_IK

./: README.md
Python/: Readme.md
Python/Inverse_Kinematics/: Generate.py  IK.py  Jacobian  pyproject.toml  requirements.txt  server.py
Unity/Assets/Libraries/: NetMQ.xml
Unity/Assets/Scripts/: Client.cs  Joint.cs
